[gd_scene load_steps=8 format=3 uid="uid://b3k4kl8il6lwc"]

[ext_resource type="Script" path="res://ui/battle_card.gd" id="1_alwo1"]
[ext_resource type="Texture2D" uid="uid://dkn8r5v2q0dxr" path="res://res/battle_card.png" id="1_qc4jn"]
[ext_resource type="FontFile" uid="uid://ljumcpkmeute" path="res://res/amiri/Amiri-Bold.ttf" id="3_phg3e"]
[ext_resource type="Texture2D" uid="uid://28h87pu88xbx" path="res://res/battle_images.png" id="3_vcyq3"]
[ext_resource type="Texture2D" uid="uid://bkr40vh1g6r1u" path="res://res/close_but.png" id="4_8em1w"]
[ext_resource type="AudioStream" uid="uid://xsefh45xoqay" path="res://res/battle_sounds.mp3" id="5_7pl6y"]

[sub_resource type="CircleShape2D" id="CircleShape2D_euavx"]
radius = 67.0075

[node name="battle_card" type="Node2D"]
scale = Vector2(2, 2)
script = ExtResource("1_alwo1")

[node name="confed" type="ColorRect" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 303.0
offset_right = 199.0
offset_bottom = 343.0
grow_horizontal = 0
color = Color(0.74902, 0.0392157, 0.188235, 1)

[node name="union" type="ColorRect" parent="."]
offset_left = -200.0
offset_top = 306.0
offset_bottom = 346.0
color = Color(0.0392157, 0.192157, 0.380392, 1)

[node name="BattleCard" type="Sprite2D" parent="."]
position = Vector2(0, 230.5)
texture = ExtResource("1_qc4jn")

[node name="BattleImages" type="Sprite2D" parent="BattleCard"]
position = Vector2(-1.19209e-07, -99.5)
scale = Vector2(0.992556, 1)
texture = ExtResource("3_vcyq3")
hframes = 3
vframes = 4

[node name="CloseBut" type="Sprite2D" parent="BattleCard"]
position = Vector2(0, 165)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_8em1w")
hframes = 2

[node name="Area2D" type="Area2D" parent="BattleCard"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BattleCard/Area2D"]
position = Vector2(-0.5, 162)
shape = SubResource("CircleShape2D_euavx")

[node name="bat_name2" type="RichTextLabel" parent="BattleCard"]
offset_left = -195.5
offset_top = 32.0
offset_right = 195.5
offset_bottom = 110.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_colors/selection_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 0
theme_override_fonts/normal_font = ExtResource("3_phg3e")
theme_override_font_sizes/bold_italics_font_size = 10
theme_override_font_sizes/normal_font_size = 30
theme_override_font_sizes/bold_font_size = 10
bbcode_enabled = true
text = "[center]Battle of Fort Sumter[/center] "
fit_content = true

[node name="bat_name" type="RichTextLabel" parent="BattleCard"]
offset_left = -198.5
offset_top = 32.0
offset_right = 201.5
offset_bottom = 110.0
theme_override_colors/default_color = Color(0.517647, 0.462745, 0.45098, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_colors/selection_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 0
theme_override_fonts/normal_font = ExtResource("3_phg3e")
theme_override_font_sizes/bold_italics_font_size = 10
theme_override_font_sizes/normal_font_size = 30
theme_override_font_sizes/bold_font_size = 10
bbcode_enabled = true
text = "[center]Battle of Fort Sumter[/center] "
fit_content = true

[node name="feds" type="RichTextLabel" parent="BattleCard"]
visible = false
offset_left = -195.5
offset_top = 38.0
offset_right = 195.5
offset_bottom = 80.0
theme_override_colors/table_border = Color(0, 0, 0, 1)
theme_override_colors/table_even_row_bg = Color(0, 0, 0, 1)
theme_override_colors/default_color = Color(0.0392157, 0.192157, 0.380392, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_phg3e")
bbcode_enabled = true
text = "[center] lookin pretty [/center]"

[node name="results" type="RichTextLabel" parent="BattleCard/feds"]
layout_mode = 0
offset_left = 1.0
offset_top = 18.0
offset_right = 387.0
offset_bottom = 47.0
theme_override_colors/default_color = Color(0.0392157, 0.192157, 0.380392, 1)
theme_override_fonts/normal_font = ExtResource("3_phg3e")
bbcode_enabled = true
text = "[center] round results[/center]"
fit_content = true

[node name="slavers" type="RichTextLabel" parent="BattleCard"]
visible = false
offset_left = -197.5
offset_top = 40.0
offset_right = 195.5
offset_bottom = 80.0
theme_override_colors/default_color = Color(0.74902, 0.0392157, 0.188235, 1)
theme_override_fonts/normal_font = ExtResource("3_phg3e")
bbcode_enabled = true
text = "[center] testing [/center]"

[node name="results" type="RichTextLabel" parent="BattleCard/slavers"]
layout_mode = 0
offset_left = 6.5
offset_top = 16.0
offset_right = 392.5
offset_bottom = 45.0
theme_override_colors/default_color = Color(0.74902, 0.0392157, 0.188235, 1)
theme_override_fonts/normal_font = ExtResource("3_phg3e")
bbcode_enabled = true
text = "[center] round results[/center]"
fit_content = true

[node name="battle_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_7pl6y")
volume_db = -10.233

[connection signal="mouse_entered" from="BattleCard/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="BattleCard/Area2D" to="." method="_on_area_2d_mouse_exited"]
